--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom bg-light py-4 border-top">
+<footer class="fixed-bottom bg-light pt-3 border-top">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
