--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item p-2">
-                <a href="/how-it-works" class="nav-link text-dark">How it works</a>
+                <a href="/how-it-works" class="nav-link text-dark font-weight-bold">How it works</a>
             </li>
             <li class="nav-item p-2">
-                <a href="/about-us" class="nav-link text-dark">About Us</a>
+                <a href="/about-us" class="nav-link text-dark font-weight-bold">About Us</a>
             </li>
             <li class="nav-item p-2">
-                <a href="/contact-us" class="nav-link text-dark">Contact Us</a>
+                <a href="/contact-us" class="nav-link text-dark font-weight-bold">Contact Us</a>
             </li>
         </ul>
     </div>
